# AwakinoUSTCsacn

./: .gitignore  README.md  config.ini  pyproject.toml
AwakinoUSTCscan/: CMakeLists.txt  CMakeLists.txt.user.3b640ca  COM.h  OSC.h  automeasurer.cpp  automeasurer.h  com.cpp  findunusedfilename.cpp  findunusedfilename.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motor.cpp  motor.h  osc.cpp  ustcscanmonitor.cpp  ustcscanmonitor.h
PythonScripts/: COMSOL2npy.py  COMSOL_viewer.py  C_ScanViewer.py  EchoModel.py  csv_viewer.py  format_exchange.py  preprocess.py  pyvisatest.py  single_wave_viewer.py  utility.py  visaget.py  waveViewer.py  手动拟合工具_tk.py
PythonScripts/NetTOF/: CNN.py  LSTM.py  NetTOF.py  check_dataset.py  dataset.py  eval.py  review_visual.py  test.py  testforawak1.py  train.py
PythonScripts/Rebuild/: test.py
PythonScripts/feature_extraction_1/: main.py
PythonScripts/tests/: torch_cuda_test.py
